<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KcalCalculator">

    <TextView
        android:id="@+id/txtView_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/enter_weight"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="5"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtView_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/enter_height_cm"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="5"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtView_Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/wiek"
        android:gravity="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText_Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:ems="5"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtView_Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/plec"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner_Gender"
        android:gravity="center"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/txtView_BMR_result"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_marginTop="80dp"
        android:background="#ABE5FF"
        android:gravity="center"
        android:text="@string/txtView_BMR"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>